// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`usePasswordType should provide values for rendering and toggle them 1`] = `
<div>
  <form>
    <input
      type="password"
    />
    <button
      aria-label="Show"
      class="show"
      title="Show"
      type="button"
    />
  </form>
</div>
`;

exports[`usePasswordType should provide values for rendering and toggle them 2`] = `
<div>
  <form>
    <input
      type="text"
    />
    <button
      aria-label="Hide"
      class="hide"
      title="Hide"
      type="button"
    />
  </form>
</div>
`;

exports[`usePasswordType should provide values for rendering and toggle them 3`] = `
<div>
  <form>
    <input
      type="password"
    />
    <button
      aria-label="Show"
      class="show"
      title="Show"
      type="button"
    />
  </form>
</div>
`;
